Fix bad alignement on phone

--- a/app/static/css/global.css
+++ b/app/static/css/global.css
@@ -349,7 +349,7 @@ body, html{
     height: 80%;
     max-height: 400px;
     object-fit: cover;
-    object-position: 0% 100%;
+    object-position: 50% 100%;
 }
 
 .card .content {
